# chaos-substrate

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RUNBOOK.md  chaos-substrate.example.toml  chaos-substrate.local.toml  docker-compose.yml  llms.txt
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.codex-plugin/: plugin.json
.cursor/: hooks.json
assets/brand-presets/: molecule.json
docs/: AGENT_VALIDATION.md  CLAUDE_CODE_COWORK.md  CLAUDE_MCP_INSTALL.md  CLAUDE_VALIDATION_BRIEF.md  EDITOR_SETUP.md  FEATURE_CONTEXT.md  GRAPH_WEBPAGE.md  HIERARCHICAL_MEMORY_ROADMAP.md  MCP_SETUP.md  OBSIDIAN_EXPORT.md  OLLAMA_SETUP.md  PLUGIN_INSTALL.md  PLUGIN_WORKFLOW.md  QUICKSTART_CLAUDE.md  REFRESH_EXPORTS.md  RUST_EXTRACTOR_NOTES.md  STORAGE_SCHEMA_REVIEW.md  SUI_MIGRATION_IMPACT_PROPOSAL.md  TYPESCRIPT_JAVASCRIPT_SUPPORT.md  claude_code_mcp.example.json  claude_desktop_config.example.json  plugin-install.html
docs/features_memory/: _spike-communities.json  feature-storyboard-story.html
docs/superpowers/plans/: 2026-05-29-real-parsers.md
docs/superpowers/specs/: 2026-05-29-real-parsers-design.md
migrations/: 001_init.sql  002_communities.sql  003_subtree_hash.sql  004_community_summary.sql  005_projects.sql  006_summary_cache.sql
scripts/: chaos  chaos-agent  package-cowork-plugin
skills/chaos-substrate/: SKILL.md
src/: add.rs  change_plan.rs  community.rs  community_summary.rs  components.rs  config.rs  embedding.rs  export_util.rs  extractor.rs  feature_context.rs  feature_export.rs  feature_inventory.rs  graph.rs  graph_export.rs  hierarchy_export.rs  hook.rs  impact.rs  layering.rs  linker.rs  main.rs  mcp.rs  merkle.rs  models.rs  obsidian_export.rs  pages.rs  project.rs  provenance.rs  query.rs  setup.rs  simple_graph_optimizer.rs  stack.rs  storage.rs  struct_features.rs  theme.rs  user_story.rs  weights.rs
src/lang/: javascript.rs  mod.rs  python.rs  solidity.rs
