[package]
name = "chaos-substrate"
version = "0.5.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "chaos"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
ignore = "0.4"
pdf-extract = "0.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
syn = { version = "2", features = ["full", "visit"] }
oxc_allocator = "0.116"
oxc_ast = "0.116"
oxc_ast_visit = "0.116"
oxc_parser = "0.116"
oxc_span = "0.116"
oxc_syntax = "0.116"
rustpython-ast = { version = "0.4", features = ["visitor"] }
rustpython-parser = "0.4"
solang-parser = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
lopdf = "0.38"
tempfile = "3"
